# FLEXIST

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_day_of_week_and_measurements.py  002_add_exercise_id_to_leaderboard.py  003_add_is_approved_to_gym.py
backend/app/: auth.py  config.py  database.py  main.py  seed.py  seed_sample_users.py
backend/app/models/: __init__.py  body_measurement.py  diet.py  equipment.py  exercise.py  gym.py  leaderboard.py  user.py  workout.py
backend/app/routers/: ai.py  auth.py  diet.py  exercises.py  gyms.py  leaderboard.py  memberships.py  users.py  workouts.py
backend/app/schemas/: ai.py  diet.py  gym.py  user.py  workout.py
backend/app/services/ai/: analysis_chain.py  diet_chain.py  workout_chain.py
backend/app/utils/: serializers.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(auth)/verify-email/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(gym-owner)/: layout.tsx
frontend/src/components/layout/: header.tsx  providers.tsx  sidebar.tsx
frontend/src/components/workout/: muscle-map.tsx
frontend/src/lib/: api.ts  supabase.ts  utils.ts
frontend/src/stores/: auth-store.ts  gym-store.ts  theme-store.ts  workout-store.ts
frontend/src/types/: index.ts
(+23 files in other folders)
